--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: minima
+theme: jekyll-theme-modernist
 title: "Angelos Stergiou Portfolio"
 description: "Showcasing examples of my work in Data Science."
