--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-modernist
+theme: time-machine
 title: "Angelos Stergiou Portfolio"
 description: "Showcasing examples of my work in Data Science."
