--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: theme: jekyll-theme-cayman
-title: "Angelos Stergiou Portfolio"
+theme: jekyll-theme-time-machine
+title: "Angelos Stergiou"
 description: "Showcasing examples of my work in Data Science."
+
