--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-time-machine
+theme: jekyll-theme-cayman
 title: "Angelos Stergiou"
 description: "Showcasing examples of my work in Data Science."
 
